# milestone-linux-client

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
bridge/: README.md
bridge/MilestoneBridge/: MilestoneBridge.csproj  Program.cs
bridge/MilestoneBridge/Protos/: README.txt
proto/: bridge.proto
scripts/: deploy_bridge.bat  onvif_discover.py  test_server.py
src/: main.py
src/core/: auth.py  config.py  event_bus.py  session.py
src/models/: __init__.py
src/protocols/: __init__.py
src/protocols/bridge/: __init__.py  client.py
src/protocols/imageserver/: __init__.py  client.py
src/protocols/mobile_xmlrpc/: __init__.py  auth.py  commands.py  connection.py  parser.py
src/protocols/onvif/: __init__.py  discovery.py
src/protocols/rest_api/: __init__.py  alarms.py  bookmarks.py  client.py  config.py  events.py  webrtc.py
src/protocols/webrtc/: __init__.py  client.py  session_manager.py
src/protocols/websocket_events/: __init__.py  client.py
src/services/: alarm_service.py  camera_service.py  discovery_service.py  export_service.py  playback_service.py  ptz_service.py  sequencing_service.py
src/ui/: alarm_panel.py  app.py  camera_view_widget.py  main_window.py  playback_timeline.py  ptz_control_panel.py  settings_dialog.py
